--- a/src/main/frontend/themes/my-theme/styles.css
+++ b/src/main/frontend/themes/my-theme/styles.css
@@ -344,13 +344,13 @@ input:-webkit-autofill:active {
 .bl2_vl{
     border: none; /* Remove border */
       border-radius: 5px; /* Rounded corners */
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+      /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); */
 }
 .addBlogView{
-    background:
+    /* background:
            rgba(0, 0, 0, 0.7) url('images/blog2.jpg');
     background-blend-mode: darken;
-    background-size: cover;
+    background-size: cover; */
 }
 .firDiv{
     display: flex;
@@ -522,4 +522,57 @@ input:-webkit-autofill:active {
 .h4_vl{
     background: #000000;
     margin-top: 85vh;
+}
+.general a{
+    width: 80%;
+    padding: 0.5em;
+    border-radius: 10px;
+}
+.itttt:hover, .itttt[highlight]{
+    background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
+
+
+    .lay_txt1{
+        color: rgb(29 78 216 / var(--tw-text-opacity, 1));
+    }
+
+    img{
+        filter: invert(18%) sepia(88%) saturate(2388%) hue-rotate(213deg) brightness(90%) contrast(92%);
+    }
+}
+.itttt{
+        width: 80%;
+        padding: 0.5em;
+        border-radius: 10px;
+}
+.loginPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background:
+               rgba(0, 0, 0, 0.7) url('images/blog2.jpg');
+        background-blend-mode: darken;
+        background-size: cover;
+}
+.loginForm{
+    width: 40vw;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    background: white;
+    width: 20vw;
+    border-radius: 2em;
+}
+.loginButton{
+    align-self: center;
+    margin-top: 2vh;
+    color: white;
+    background: rgba(0, 123, 255, 0.7);
+    border-radius: 1em;
+    cursor: pointer;
 }
